# agy-sdk-quickstart

./: .gitignore  README.md  common.py  helper.py  lab  lab_runtime.py  play.py  pyproject.toml  setup.sh  trace_hooks.py  tutorial.md
assets/: README.txt
solutions/: step1_hello.py  step2_streaming.py  step3_tools.py  step4_structured.py  step5_hooks.py  step6_guardrail.py  step8_report.py
steps/: step1_hello.py  step3_tools.py  step4_structured.py  step5_hooks.py  step6_guardrail.py  step7_multimodal.py  step8_report.py  step9_voice.py
