[project]
name = "agy-sdk-quickstart"
version = "0.1.0"
description = "Build with AI 2026 Taipei — Antigravity SDK 八步實戰 lab（Cloud Shell 自走教材）"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Alpha / Research Preview — 鎖死已驗過的版本（0.1.3 未測，alpha patch 之間可能 break）
    "google-antigravity==0.1.2",
    "httpx",
]

[tool.uv]
# 鎖在這個範圍即可，活動當天 Cloud Shell 用 uv 暖快取
package = false
